<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivThumbnail"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/profile_img"
                android:scaleType="centerCrop"/>

            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_margin="24dp"
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"/>

            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="24dp"
                android:id="@+id/btnAddtoFacourites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_heart"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:gravity="center"
                android:text="Yaniv Ben Haim"
                android:elevation="4dp"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toTopOf="@id/tvSummary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Android Developer"
                android:fontFamily="@font/gothica1_medium"
                android:elevation="4dp"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:textStyle="normal"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toBottomOf="@id/ivThumbnail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <View
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintBottom_toBottomOf="@+id/ivThumbnail"
                android:background="@drawable/gradient_trans_to_black"/>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:scaleX="0.60"
                android:scaleY="0.60"
                android:rating="5"
                android:stepSize="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSummary" />


            <TextView
                android:id="@+id/tvPlotSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:gravity="start"
                android:text="About me"
                android:elevation="4dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@id/ratingBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvPlotSummaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:gravity="start"
                android:text="@string/profile_text"
                android:fontFamily="@font/gothica1_medium"
                android:elevation="4dp"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="normal"
                android:layout_marginBottom="12dp"
                app:layout_constraintTop_toBottomOf="@id/tvPlotSummary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:gravity="start"
                android:text="@string/skills"
                android:elevation="4dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@id/tvPlotSummaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvSkills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:gravity="start"
                android:text="Languages -> Java, Kotlin, Python, Swift \n\n Libraries:\n \n Jetpack \n Retrofit \n Room \n Dagger Hilt \n Kotlin Flow \n Jetpack Compose \n And lot's more"
                android:fontFamily="@font/gothica1_medium"
                android:elevation="4dp"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="normal"
                android:layout_marginBottom="12dp"
                app:layout_constraintTop_toBottomOf="@id/tvMore"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMovies"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvSkills"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintTop_toBottomOf="@id/rvMovies"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btnSaveToFavourites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/btn_background"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/love_it"/>






</androidx.constraintlayout.widget.ConstraintLayout>